# super-project-example

./: .bumpversion.cfg  CHANGELOG.md  LICENSE.rst  README.md  pyproject.toml  tasks.py
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  modules.rst  super_project_example.rst  usage.rst
src/super_project_example/: __init__.py  cli.py  super_project_example.py
tests/: __init__.py  test_cli.py  test_super_project_example.py
